# chishiki

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml
crates/blobstore/: Cargo.toml
crates/blobstore/src/: hash.rs  lib.rs  manifest.rs
crates/chunker/: Cargo.toml
crates/chunker/src/: lib.rs
crates/index/: Cargo.toml
crates/index/src/: lib.rs
crates/vfs/: Cargo.toml
crates/vfs/src/: davfs.rs  file.rs  lib.rs  meta.rs  metadata.rs
crates/webdav-server/: Cargo.toml
crates/webdav-server/src/: main.rs  web.rs
crates/webdav-server/tests/: webdav.rs
crates/webdav-server/tests/common/: mod.rs
docs/: DEPLOY.md
docs/specs/: 0001-initial-build-plan.md  0002-web-interface.md  0003-web-ui.md  0004-search.md  0005-chunk-gc.md  0006-large-file-streaming.md  0007-integration-tests.md
scripts/: strip_frontmatter.py
