[workspace]
resolver = "3"
members = [
    "crates/blobstore",
    "crates/chunker",
    "crates/vfs",
    "crates/index",
    "crates/webdav-server",
]

# Settings shared by every crate in the workspace. Individual crates opt in with
# `edition.workspace = true`, `version.workspace = true`, etc. in their manifests.
[workspace.package]
version = "0.4.0"
edition = "2024"
rust-version = "1.96"
license = "MIT"
authors = ["Nathan Fiedler <nathanfiedler@fastmail.fm>"]
repository = "https://github.com/nlfiedler/chishiki"

# Shared lint configuration. Crates opt in with `[lints] workspace = true`.
# Levels are set to `warn` here; CI escalates them to hard errors by passing
# `-D warnings` to `cargo clippy`, so day-to-day local builds stay unblocked
# while CI enforces a clean tree.
[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

# Dependencies shared across crates are declared here and referenced from member
# manifests with `<dep>.workspace = true`, keeping versions in lockstep. Concrete
# dependencies are added as each phase needs them.
[workspace.dependencies]
# Internal crates (path dependencies).
blobstore = { path = "crates/blobstore" }
chunker = { path = "crates/chunker" }
vfs = { path = "crates/vfs" }
index = { path = "crates/index" }

# Third-party crates, versions pinned once for the whole workspace.
blake3 = "1"
fastcdc = "3"
tempfile = "3"
# default-features off drops the built-in localfs/memfs backends (and their
# libc/lru/parking_lot/reflink deps); we supply our own backend but still get
# DavHandler, MemLs/FakeLs, the fs traits, and DavPath.
dav-server = { version = "0.11", default-features = false }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "sync"] }
rusqlite = { version = "0.40", features = ["bundled"] }
bytes = "1"
futures-util = "0.3"
pulldown-cmark = "0.13"
percent-encoding = "2"
# Full-text search engine backing the reverse index (Phase 5).
tantivy = "0.26"
# XML reader for parsing RFC 5323 SEARCH request bodies in the router.
quick-xml = "0.41"

[profile.release]
lto = "thin"
