[package]
name = "blobstore"
description = "Content-addressable blob store keyed by content hash."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
chunker.workspace = true
blake3.workspace = true
tempfile.workspace = true

[lints]
workspace = true
