[package]
name = "chunker"
description = "Content-defined chunking (FastCDC) over byte streams."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
fastcdc.workspace = true

[lints]
workspace = true
