[package]
name = "index"
description = "Reverse (inverted) index for full-text search over stored documents."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tantivy.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
