[package]
name = "vfs"
description = "Virtualized filesystem: virtual path namespace over the blob store, with versioned metadata."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]

[lints]
workspace = true
