[package]
name = "webdav-server"
description = "WebDAV/HTTP server: thin consumer of the storage engine crates."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
vfs.workspace = true
dav-server.workspace = true
axum.workspace = true
tokio.workspace = true
pulldown-cmark.workspace = true

[lints]
workspace = true
