[package]
name = "webdav-server"
description = "WebDAV/HTTP server: thin consumer of the storage engine crates."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
vfs.workspace = true
dav-server.workspace = true
axum.workspace = true
tokio.workspace = true
# Streams a historical file version's body lazily (try_unfold) in the router.
futures-util.workspace = true
pulldown-cmark.workspace = true
percent-encoding.workspace = true
# Parses RFC 5323 SEARCH request bodies (DAV:basicsearch) in the router.
quick-xml.workspace = true

[dev-dependencies]
# Integration tests spawn the real binary and drive it over HTTP. reqwest with
# no default features = a plain-HTTP client (no TLS backend), able to send
# arbitrary WebDAV methods and read status/headers/bytes.
reqwest = { version = "0.12", default-features = false }
tempfile.workspace = true

[lints]
workspace = true
